# codexmate

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  REDESIGN.md  SECURITY.md
.github/workflows/: release.yml
apps/codexmate-launcher/: Cargo.toml  build.rs
apps/codexmate-launcher/src/: main.rs
apps/codexmate-manager/: index.html  package-lock.json  package.json
apps/codexmate-manager/src/: app.tsx  main.tsx  styles.css
apps/codexmate-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codexmate-manager/src-tauri/capabilities/: default.json
apps/codexmate-manager/src-tauri/icons/: icon.icns
apps/codexmate-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/codexmate-manager/src-tauri/tests/: windows_subsystem.rs
apps/codexmate-manager/src/components/about/: AboutPage.tsx  AboutPanelHeader.tsx  DiagnosticsPanel.tsx  HealthStatus.tsx  LogDiagnosticsTabs.tsx  LogsPanel.tsx  UpdateCheck.tsx
apps/codexmate-manager/src/components/launch/: LaunchPage.tsx
apps/codexmate-manager/src/components/layout/: Topbar.tsx
apps/codexmate-manager/src/components/routing/: ProviderCard.tsx  ProviderList.tsx  RoutingPage.tsx  types.ts
apps/codexmate-manager/src/components/shared/: ContactDialog.tsx  NoticeToast.tsx
apps/codexmate-manager/src/components/ui/: select.tsx  tabs.tsx
apps/codexmate-manager/src/lib/: toml.ts  types.ts
assets/: routing-example.toml
assets/inject/: renderer-inject.js  renderer-inject.test.mjs
crates/codexmate-core/: Cargo.toml
crates/codexmate-core/src/: assets.rs  ccs_import.rs  http_client.rs  image_compressor.rs  launcher.rs  lib.rs  model_catalog.rs  paths.rs  ports.rs  protocol_proxy.rs  relay_config.rs  routes.rs  settings.rs  status.rs  update.rs  version.rs  watcher.rs
crates/codexmate-core/src/install/: macos.rs  mod.rs  windows.rs
crates/codexmate-core/src/router/: config.rs  engine.rs  mod.rs
crates/codexmate-core/src/upstream_worktree/: git.rs
crates/codexmate-core/tests/: bridge_routes.rs  cdp_bridge.rs  installers.rs  launcher.rs  model_catalog.rs  protocol_proxy.rs  update.rs  upstream_worktree.rs  watcher.rs  zed_remote.rs
crates/codexmate-data/: Cargo.toml
crates/codexmate-data/src/: markdown.rs  provider_sync.rs  storage.rs
crates/codexmate-data/tests/: markdown.rs  provider_sync.rs  storage_adapter.rs
docs/: github-release-checklist.md  promotion-en.md  promotion-zh.md
scripts/: generate-latest-json.sh
scripts/installer/macos/: package-dmg.sh
