[package]
name = "codexmate-launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "codexmate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
codexmate-core = { path = "../../crates/codexmate-core" }
codexmate-data = { path = "../../crates/codexmate-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
