[package]
name = "codexmate-core"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
async-trait = "0.1"
base64.workspace = true
directories.workspace = true
futures-util = "0.3"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
regex.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio = { workspace = true, features = ["net"] }
tokio-tungstenite.workspace = true
toml.workspace = true
toml_edit.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile.workspace = true
