[package]
name = "codexmate-manager"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "codexmate_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codexmate-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
async-trait = "0.1"
codexmate-core = { path = "../../../crates/codexmate-core" }
codexmate-data = { path = "../../../crates/codexmate-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol", "tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-dialog = "2"
reqwest.workspace = true
toml.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
